--- a/app/module/timeslot/element/timeslot/timeslot.html
+++ b/app/module/timeslot/element/timeslot/timeslot.html
@@ -14,6 +14,8 @@
 <link rel="import" href="../../../../element/iconset/iconset.html">
 <link rel="import" href="../../element/iconset/iconset.html">
 
+<link rel="import" href="../../../../element/storage/storage-adapter-behaviour.html">
+
 <dom-module id="timeslot-wc">
     <template>
         <style include="global-layout"></style>
@@ -88,20 +90,27 @@
                 background-color: #0b8043 ;
             }
 
-            paper-icon-button[aria-disabled="true"].action {
+            paper-icon-button[disabled].action {
                 background-color: grey;
                 opacity: 0.5;
             }
+
+            paper-icon-button[disabled] {
+                color: var(--disabled-text-color);
+                opacity: 0.5;
+            }
+
         </style>
         <paper-card id="design" class="setting">
             <div class="card-setting">
                 <paper-icon-button
-                        id="overlayIcon"
+                        id="contextIcon"
                         item="{{timeslot}}"
                         title="Send timeslot in overlay mode"
                         icon="timeslot:overlay"
-                        class$="{{_computeContexIcon()}}"
-                        on-tap="_tapOverlay">
+                        class="activePaperButton"
+                        on-tap="_tapOverlay"
+                        disabled="{{hideCrud}}">
                 </paper-icon-button>
                 <paper-icon-button
                         id="rotationIcon"
@@ -109,26 +118,23 @@
                         title="{{labelRotationIcon}}"
                         icon="timeslot:{{timeslot.rotation}}"
                         class="activePaperButton"
-                        on-tap="_tapRotation">
+                        on-tap="_tapRotation"
+                        disabled="{{hideCrud}}">
                 </paper-icon-button>
             </div>
             <div class="card-content flex flex-horizontal">
                 <div class="data flex-basis-85 flex flex-vertical">
                     <div class="dataWrapper">
                         <div class="nameTimeslot">{{timeslot.name}}</div>
-                        <div class$="{{timeslot.status}}">{{timeslot.status}}
-                            <template is="dom-if" if="{{_viewTime(timeslot, 'running', 'pause')}}">
-                                {{timeslot.currentTime}} sec
-                            </template>
-                        </div>
-                        <div>{{timeslot.duration}} sec</div>
+                        <div id="status">{{status}}</div>
+                        <div>{{currentTime}} / {{timeslot.duration}} sec</div>
                     </div>
                 </div>
                 <div class="data flex-basis-15 flex flex-vertical">
                     <paper-menu-button ignore-select disabled="{{hideCrud}}">
                         <paper-icon-button icon="app:more" slot="dropdown-trigger" alt="multi menu"></paper-icon-button>
                         <paper-listbox slot="dropdown-content" multi>
-                            <paper-item on-click="_update">Modifica</paper-item>
+                            <paper-item on-click="_updateView">Modifica</paper-item>
                             <paper-item  on-click="_remove">Elimina</paper-item>
                         </paper-listbox>
                     </paper-menu-button>
@@ -144,12 +150,11 @@
     </template>
 
     <script>
-        class ElementTimeslot extends Polymer.Element {
+        class ElementTimeslot extends StorageAdapterBehaviour {
 
-            static get is() {
-                return 'timeslot-wc';
-            }
-
+            /**
+             * @return {Array}
+             */
             static get LIST_ROTATION() {
                 return [
                     Timeslot.ROTATION_NO,
@@ -158,6 +163,9 @@
                 ];
             }
 
+            /**
+             * @return {Object}
+             */
             static get LIST_ROTATION_LABEL_ICON() {
                 let obj = {};
                 obj[Timeslot.ROTATION_NO] = 'Send timeslot in standard mode';
@@ -166,45 +174,151 @@
                 return obj;
             }
 
+            /**
+             * @return {Object}
+             */
+            static get LIST_CONTEXT_LABEL_ICON() {
+                let obj = {};
+                obj[Timeslot.CONTEXT_OVERLAY] = 'Send timeslot in overlay mode';
+                obj[Timeslot.CONTEXT_STANDARD] = 'Send timeslot in standard mode';
+                return obj;
+            }
+
+            static get is() {
+                return 'timeslot-wc';
+            }
+
             static get properties() {
                 return {
 
                     timeslot: {
                         type: Object,
+                        notify: true,
+                        value: new Timeslot(),
                         observer: '_timeslotChanged'
                     },
 
                     hideCrud : {
                         type: Boolean,
+                        notify: true,
                         value: false
+                    },
+
+                    storageName: {
+                        value: TimeslotConfig.NAME_SERVICE
+                    },
+
+                    currentTime : {
+                        notify: true,
+                        value: 0
+                    },
+
+                    status : {
+                        notify: true
                     }
                 };
             }
 
+            ready() {
+                super.ready();
+                this.addStorageListener(dsign.storage.Storage.STORAGE_POST_UPDATE, this._updateFromStorage.bind(this))
+            };
 
-            _computeContexIcon() {
-                return this.timeslot.context === Timeslot.CONTEXT_OVERLAY ? 'activePaperButton timeslot' : 'timeslot';
+            /**
+             * @param evt
+             */
+            _updateFromStorage(evt) {
+                this._clearStatusClass(this.timeslot.status);
+                switch (true) {
+                    case evt.data.id === this.timeslot.id && this.timeslot.status === Timeslot.RUNNING:
+                        this.timeslot = evt.data;
+                        this.currentTime = this.timeslot.getCurrentTimeString();
+
+                        this.status = this.timeslot.status;
+                        this._updateActionHtml();
+                        break;
+                    case evt.data.id === this.timeslot.id && this.timeslot.status !== Timeslot.RUNNING:
+                        this.timeslot = null;
+                        this.timeslot = evt.data;
+                        break;
+                }
             }
 
-            _timeslotChanged(newValue, oldValue) {
+            /**
+             * @param newValue
+             */
+            _timeslotChanged(newValue) {
                 if (!newValue) {
                     return;
                 }
 
+                this.currentTime = this.timeslot.getCurrentTimeString();
+                this.status = this.timeslot.status;
+                this._updateActionHtml();
+                this._updateContextHtml();
+                this._updateRotationHtml();
+                this._clearStatusClass(this.timeslot.status);
+            }
+
+            /**
+             * @param evt
+             * @private
+             */
+            _tapOverlay(evt) {
+                this.timeslot.context = this.timeslot.context === 'standard' || !this.timeslot.context ? 'overlay' : 'standard';
+                this.dispatchEvent(new CustomEvent('change-context', {detail: this.timeslot}));
+                this._updateContextHtml();
+            }
+
+            /**
+             * @private
+             */
+            _updateContextHtml() {
+                this.$.contextIcon.setAttribute('title', ElementTimeslot.LIST_CONTEXT_LABEL_ICON[this.timeslot.context]);
+                this.$.contextIcon.icon = `timeslot:${this.timeslot.context}`;
+            }
+
+            /**
+             * @param evt
+             * @private
+             */
+            _tapRotation(evt) {
+
+                let index = ElementTimeslot.LIST_ROTATION.findIndex((items) => {
+                    return items === this.timeslot.rotation;
+                });
+
+                this.timeslot.rotation = (index < (ElementTimeslot.LIST_ROTATION.length - 1)) ? ElementTimeslot.LIST_ROTATION[index+1] : ElementTimeslot.LIST_ROTATION[0];
+                this.dispatchEvent(new CustomEvent('change-rotation', {detail: this.timeslot}));
+                this._updateRotationHtml();
+            }
+
+            /**
+             * @private
+             */
+            _updateRotationHtml() {
+                this.$.rotationIcon.setAttribute('title', ElementTimeslot.LIST_ROTATION_LABEL_ICON[this.timeslot.rotation]);
+                this.$.rotationIcon.icon = `timeslot:${this.timeslot.rotation}`;
+            }
+
+            /**
+             * @private
+             */
+            _updateActionHtml() {
                 switch (true) {
-                    case newValue.status === Timeslot.RUNNING:
+                    case this.timeslot.status === Timeslot.RUNNING:
                         this.hideCrud = true;
-                        this.$.overlayIcon.disabled = true;
+                        this.$.contextIcon.disabled = true;
                         this.$.rotationIcon.disabled = true;
 
                         this.$.play.disabled = true;
                         this.$.stop.disabled = false;
-                        this.$.pause.disabled = newValue.rotation === Timeslot.ROTATION_INFINITY ? true : false;
+                        this.$.pause.disabled = this.timeslot.rotation === Timeslot.ROTATION_INFINITY ? true : false;
                         break;
-                    case newValue.status === Timeslot.PAUSE:
+                    case this.timeslot.status === Timeslot.PAUSE:
 
                         this.hideCrud = false;
-                        this.$.overlayIcon.disabled = false;
+                        this.$.contextIcon.disabled = false;
                         this.$.rotationIcon.disabled = false;
 
                         this.$.play.disabled = false;
@@ -213,7 +327,7 @@
                         break;
                     default:
                         this.hideCrud = false;
-                        this.$.overlayIcon.disabled = false;
+                        this.$.contextIcon.disabled = false;
                         this.$.rotationIcon.disabled = false;
 
                         this.$.play.disabled = false;
@@ -223,54 +337,17 @@
             }
 
             /**
-             * @param timeslot
-             * @returns {boolean}
+             * @param {string} classString
+             */
+            _clearStatusClass(classString) {
+                this.$.status.className = '';
+                this.$.status.classList.add(classString);
+            }
+
+            /**
+             * @param evt
              * @private
              */
-            _viewTime(timeslot) {
-                if (arguments.length < 2) {
-                    console.warn('less then 2 parameter pass on this funcion')
-                    return false;
-                }
-
-                if (timeslot.rotation === Timeslot.ROTATION_INFINITY) {
-                    return false;
-                }
-
-                let inStatus = false;
-                for (let cont = 1; arguments.length > cont; cont++) {
-                    if (arguments[cont] === timeslot.status) {
-                        inStatus = true;
-                        break;
-                    }
-                }
-
-                return inStatus;
-            }
-
-            _tapOverlay(evt) {
-                this.timeslot.context = this.timeslot.context === 'standard' || !this.timeslot.context ? 'overlay' : 'standard';
-                if (this.timeslot.context === 'overlay') {
-                    this.$.overlayIcon.classList.add("activePaperButton");
-                } else {
-                    this.$.overlayIcon.classList.remove("activePaperButton");
-                }
-                this.dispatchEvent(new CustomEvent('wrap-update-timeslot', {detail: this.timeslot}));
-            }
-
-            _tapRotation(evt) {
-
-
-                let index = ElementTimeslot.LIST_ROTATION.findIndex((items) => {
-                    return items === this.timeslot.rotation;
-                });
-
-                this.timeslot.rotation = (index < (ElementTimeslot.LIST_ROTATION.length - 1)) ?
-                    ElementTimeslot.LIST_ROTATION[index+1] : ElementTimeslot.LIST_ROTATION[0];
-                this.labelRotationIcon = ElementTimeslot.LIST_ROTATION_LABEL_ICON[this.timeslot.rotation];
-                this.dispatchEvent(new CustomEvent('wrap-update-timeslot', {detail: this.timeslot}));
-            }
-
             _play(evt) {
                 if (this.timeslot.status === Timeslot.IDLE) {
                     this.dispatchEvent(new CustomEvent('play', {detail: this.timeslot}));
@@ -279,20 +356,36 @@
                 }
             }
 
+            /**
+             * @param evt
+             * @private
+             */
             _stop(evt) {
                 this.dispatchEvent(new CustomEvent('stop', {detail: this.timeslot}));
             }
 
+            /**
+             * @param evt
+             * @private
+             */
             _pause(evt) {
                 this.dispatchEvent(new CustomEvent('pause', {detail: this.timeslot}));
             }
 
+            /**
+             * @param evt
+             * @private
+             */
             _remove(evt) {
-                this.dispatchEvent(new CustomEvent('wrap-remove', {detail: this.timeslot}));
+                this.dispatchEvent(new CustomEvent('remove', {detail: this.timeslot}));
             }
 
-            _update(evt) {
-                this.dispatchEvent(new CustomEvent('wrap-update', {detail: this.timeslot}));
+            /**
+             * @param evt
+             * @private
+             */
+            _updateView(evt) {
+                this.dispatchEvent(new CustomEvent('update-view', {detail: this.timeslot}));
             }
         }
 
