--- a/app/module/timeslot/widget/timeslot-tags.html
+++ b/app/module/timeslot/widget/timeslot-tags.html
@@ -42,11 +42,7 @@
                     on-stop="stop"
                     on-pause="pause"
                     hide-crud
-                    on-wrap-update="displayUpdateView"
-                    on-wrap-update-timeslot="update"
-                    on-remove="remove"
-                    on-change-rotation="update"
-                    on-change-context="update">
+                    remove-crud>
             </timeslot-wc>
         </template>
 
