--- a/app/module/playlist/index.html
+++ b/app/module/playlist/index.html
@@ -1,4 +1,3 @@
-
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../../css/global-layout.html">
@@ -9,81 +8,83 @@
 
 <dom-module id="playlist-index">
 
-  <template>
-    <style include="global-layout"></style>
-    <style include="global-style"></style>
-    <style>
-      #ironPages {
-        padding: 16px;
-      }
+    <template>
+        <style include="global-layout"></style>
+        <style include="global-style"></style>
+        <style>
+            #ironPages {
+                padding: 16px;
+            }
 
-    </style>
-    <iron-pages id="ironPages" selected="{{selected}}" >
-      <div id="list">
-        <playlist-view-list selected="{{selected}}" playlist-selected="{{playlist}}">
-            <div slot="header" class="flex-horizontal flex-1 flex-vertical-center">
-                <div class="flex flex-1 flex-vertical-center">Lista Playlist</div>
-                <paper-icon-button
-                        id="buttAddPlaylistr"
-                        icon="app:create"
-                        class="circle"
-                        title="Crea monitor virtuale"
-                        on-click="displayAddView">
-                </paper-icon-button>
+        </style>
+        <iron-pages id="ironPages" selected="{{selected}}">
+            <div id="list">
+                <playlist-view-list selected="{{selected}}" resource-selected="{{playlist}}">
+                    <div slot="header" class="flex-horizontal flex-1 flex-vertical-center">
+                        <div class="flex flex-1 flex-vertical-center">Lista Playlist</div>
+                        <paper-icon-button
+                                id="buttAddPlaylistr"
+                                icon="app:create"
+                                class="circle"
+                                title="Crea monitor virtuale"
+                                on-click="displayAddView">
+                        </paper-icon-button>
+                    </div>
+                </playlist-view-list>
             </div>
-        </playlist-view-list>
-      </div>
-      <div id="add">
-          <playlist-view-upsert>
-              <div slot="header" class="flex-horizontal flex-1 flex-vertical-center">
-                  <paper-icon-button
-                          icon="app:back"
-                          title="Torna alla lista delle configurazioni"
-                          on-tap="displayListView">
-                  </paper-icon-button>
-                  <div>Add playlist</div>
-              </div>
-          </playlist-view-upsert>
-      </div>
-      <div id="edit">
-          <playlist-view-upsert playlist="{{playlist}}">
-              <div slot="header" class="flex-horizontal flex-1 flex-vertical-center">
-                  <paper-icon-button
-                          icon="app:back"
-                          title="Torna alla lista delle configurazioni"
-                          on-tap="displayListView">
-                  </paper-icon-button>
-                  <div>Edit playlist</div>
-              </div>
-          </playlist-view-upsert>
-      </div>
-    </iron-pages>
-  </template>
-  <script>
-    class PluginPluginIndex extends Polymer.Element {
+            <div id="add">
+                <playlist-view-upsert>
+                    <div slot="header" class="flex-horizontal flex-1 flex-vertical-center">
+                        <paper-icon-button
+                                icon="app:back"
+                                title="Torna alla lista delle configurazioni"
+                                on-tap="displayListView">
+                        </paper-icon-button>
+                        <div>Add playlist</div>
+                    </div>
+                </playlist-view-upsert>
+            </div>
+            <div id="edit">
+                <playlist-view-upsert resource="{{playlist}}">
+                    <div slot="header" class="flex-horizontal flex-1 flex-vertical-center">
+                        <paper-icon-button
+                                icon="app:back"
+                                title="Torna alla lista delle configurazioni"
+                                on-tap="displayListView">
+                        </paper-icon-button>
+                        <div>Edit playlist</div>
+                    </div>
+                </playlist-view-upsert>
+            </div>
+        </iron-pages>
+    </template>
+    <script>
+        class PluginPluginIndex extends Polymer.Element {
 
-      static get is() { return 'playlist-index'; }
+            static get is() {
+                return 'playlist-index';
+            }
 
-      static get properties() {
-          return {
+            static get properties() {
+                return {
 
-              selected: {
-                  type: Number,
-                  value: 0
-              }
-          }
-      }
+                    selected: {
+                        type: Number,
+                        value: 0
+                    }
+                }
+            }
 
-      displayAddView() {
-          this.selected = 1;
-      }
+            displayAddView() {
+                this.selected = 1;
+            }
 
-      displayListView() {
-          this.selected = 0;
-      }
-    }
+            displayListView() {
+                this.selected = 0;
+            }
+        }
 
-    window.customElements.define(PluginPluginIndex.is, PluginPluginIndex);
+        window.customElements.define(PluginPluginIndex.is, PluginPluginIndex);
 
-  </script>
+    </script>
 </dom-module>Resource
