--- a/app/module/timeslot/element/timeslot/timeslot.html
+++ b/app/module/timeslot/element/timeslot/timeslot.html
@@ -126,7 +126,7 @@
                     <div class="dataWrapper">
                         <div class="nameTimeslot">{{timeslot.name}}</div>
                         <div id="status">{{status}}</div>
-                        <div>{{currentTime}} / {{timeslot.duration}} sec</div>
+                        <div class="flex flex-horizontal-end">{{currentTime}} / {{timeslot.duration}} sec</div>
                     </div>
                 </div>
                 <div class="data flex-basis-15 flex flex-vertical" hidden$="[[removeCrud]]">
